--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 *.dll
 *.so
 *.dylib
+FFQATracking
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# project folder
+static/upload/**
