--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,12 @@
 {
+    // "go.buildOnSave": true,
+    // "go.lintOnSave": true,
+    // "go.vetOnSave": true,
+    // "go.buildFlags": [],
+    // "go.lintFlags": [],
+    // "go.vetFlags": [],
+    // "go.formatOnSave": true,
+    // "go.formatTool": "gofmt",
+    // "go.goroot": "/usr/local/go",
+    // "go.gopath": "/Users/derrick.zhu/Documents/go/"
 }
