--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "editor.quickSuggestions": true
+    "editor.quickSuggestions": true,
+
+    "go.languageServerExperimentalFeatures": {
+        "format": false,
+        "autoComplete": true
+    },
+
+    "go.useCodeSnippetsOnFunctionSuggest": true,
+    "go.useCodeSnippetsOnFunctionSuggestWithoutType": true,
 }
