--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,17 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Launch test function",
+			"type": "go",
+			"request": "launch",
+			"mode": "test",
+			"program": "${workspaceRoot}",
+			"args": [
+				"-test.run",
+				"Test_templateToHTML"
+			]
+		},
+		{
 			"name": "Launch",
 			"type": "go",
 			"request": "launch",
