--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Launch test function",
+			"name": "Launch - test",
 			"type": "go",
 			"request": "launch",
 			"mode": "test",
@@ -13,7 +13,7 @@
 			]
 		},
 		{
-			"name": "Launch",
+			"name": "Launch - Normal",
 			"type": "go",
 			"request": "launch",
 			"mode": "debug",
